--- a/style.css
+++ b/style.css
@@ -18,30 +18,36 @@ body {
     gap: 20px;
   }
   .headline{
-    /* background-color: #11A5AC; */
+    /* background-color: aqua; */
+    margin: 0;
   }
   .news-container {
     border-right: 1px solid #090909;
     margin-right: 20px;
+    /* background-color: #090909; */
     /* Add border color and width */
     border-right: 1px solid #656060;
     width: 60%;
     display: flex;
-    
+    flex-direction: column; /* Update to column layout */
+    max-height: 100%; /* Adjust the max height as needed */
+    /* overflow-y: auto;  */
     /* background-color: antiquewhite; */
 }
-.news-img-description{
     /* padding-top: 40px; */
-    width: 100%;
-    border-radius: 8px;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+    .news-img-description {
+      padding-top: 0; /* Remove the padding */
+      width: 100%;
+      border-radius: 8px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    
+
 h1{
-    margin-left: 50px;
+   width: 90%;
     margin-bottom: 10px;
    color: #11A5AC;
 }
@@ -51,6 +57,7 @@ h1{
 }
 .news-image{
     width:85%;
+    margin-top: 20px;
     margin-right: 40px;
 }
 .description {
@@ -60,6 +67,8 @@ h1{
 }.sidebar {
     width: 40%;
     font-size: 22px;
+    /* margin-top: 50px; */
+    /* background-color: aquamarine; */
     /* border: 1px solid #ccc; */
     /* padding: 10px; */
   }
@@ -75,6 +84,7 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
     border: 1px solid black;
     background: #11A5AC;
     text-align: center;
@@ -93,15 +103,15 @@ h1{
     display: flex;
     align-items: center;
     border: 1px solid black;
-    padding-top: 15px;
+    padding-top: 10px;
     
     /* margin-bottom: 10px; */
   }
   
-  .news-icon i {
+  .news-icon img {
     display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     padding-left: 5px;
     padding-right: 10px;
     font-size: larger;
@@ -110,7 +120,7 @@ h1{
   }
   
   .news-content {
-    font-size: 18px;
+    font-size: 22px;
   }
   @media screen and (max-width: 768px) {
     .container {
@@ -164,7 +174,7 @@ h1{
     }
     
     .news-content {
-      font-size: 16px;
+      font-size: 18px;
     }
     .news-img-description img{
         width: 100%;
