--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ h1{
   }
   
   .news-section h2 {
-    font-size: 18px;
+    font-size: 22px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -110,17 +110,18 @@ h1{
   
   .news-icon img {
     display: inline-block;
-    width: 40px;
-    height: 40px;
-    padding-left: 5px;
-    padding-right: 10px;
-    font-size: larger;
-    color: #11A5AC;
+    width:85px;
+    height:100%;
+    display: block;
+    width: 85px;
+    height: 100%;
+    object-fit: cover;
+
     /* margin-right: 10px; */
   }
   
   .news-content {
-    font-size: 22px;
+    font-size: 18px;
   }
   @media screen and (max-width: 768px) {
     .container {
@@ -174,7 +175,7 @@ h1{
     }
     
     .news-content {
-      font-size: 22px;
+      font-size: 18px;
     }
     .news-img-description img{
         width: 100%;
