--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1{
     /* background-color: black; */
 }.sidebar {
     width: 40%;
-    font-size: 22px;
+    /* font-size: 22px; */
     /* margin-top: 50px; */
     /* background-color: aquamarine; */
     /* border: 1px solid #ccc; */
@@ -103,7 +103,7 @@ h1{
     display: flex;
     align-items: center;
     border: 1px solid black;
-    padding-top: 10px;
+    /* padding-top: 10px; */
     
     /* margin-bottom: 10px; */
   }
@@ -116,7 +116,10 @@ h1{
     width: 85px;
     height: 100%;
     object-fit: cover;
-
+    /* padding-left: 5px; */
+    padding-right: 10px;
+    /* font-size: larger; */
+    /* color: #11A5AC; */
     /* margin-right: 10px; */
   }
   
@@ -157,8 +160,8 @@ h1{
     .news-list li {
       display: flex;
       align-items: center;
-      border: none;
-      padding-top: 15px;
+      /* border: none;
+      padding-top: 15px; */
       /* margin-bottom: 10px; */
       border: 1px solid black;
     }
@@ -171,6 +174,8 @@ h1{
     width: 85px;
     height: 100%;
     object-fit: cover;
+    /* padding-left: 5px; */
+    padding-right: 10px;
     }
     
     .news-content {
