--- a/style.css
+++ b/style.css
@@ -103,19 +103,27 @@ h1{
     display: flex;
     align-items: center;
     border: 1px solid black;
-      height: 70px;
+     height: 70px;
     /* padding-top: 10px; */
     
     /* margin-bottom: 10px; */
+  }
+  .news-icon{
+    display: flex;
+    gap: 2100px;
+  align-items: center;
+  justify-content: center;
+  width: 85px;
+  padding-left: 4px;
+  padding-right: 10px;
+  height: 100%;
   }
   
   .news-icon img {
     display: inline-block;
     width:85px;
     height:100%;
-    display: block;
-    width: 85px;
-    height: 100%;
+   
     object-fit: cover;
     /* padding-left: 5px; */
     padding-right: 10px;
